# minitorch

./: .gitignore  CMakeLists.txt  README.md
aten/src/ATen/: CMakeLists.txt  Operators.cppt
aten/src/ATen/core/: ATen_fwd.h  Tensor.h  TensorBase.h
aten/src/ATen/native/: Resize.h  TensorShape.cpp  TensorShape.h  my_kernel.cpp  my_kernel.h  native_functions.yaml
aten/src/ATen/ops/: as_strided.htt  as_strided_ops.htt
aten/src/ATen/templates/: TensorBody.h
c10/: CMakeLists.txt
c10/core/: Allocator.h  Device.h  DeviceType.cpp  DeviceType.h  DispatchKey.cpp  DispatchKey.h  DispatchKeySet.cpp  DispatchKeySet.h  MemoryFormat.h  ScalarType.h  Storage.h  StorageImpl.h  SymInt.cpp  SymInt.h  SymNodeImpl.h  TensorImpl.cpp  TensorImpl.h
c10/core/impl/: SizesAndStrides.cpp  SizesAndStrides.h
c10/macros/: Macros.h
c10/util/: ArrayRef.h  C++17.h  ConstexprCrc.h  IdWrapper.h  TypeIndex.h  UniqueVoidPtr.cpp  UniqueVoidPtr.h  accumulate.h  intrusive_ptr.h  irange.h  llvmMathExtras.h  string_view.h  typeid.cpp  typeid.h
doc/: guide for predeined macros in c++ compiler.md  why instrusive_ptr.md
tutorials/: understand aten Tensor.ipynb
tutorials/.ipynb_checkpoints/: understand aten Tensor-checkpoint.ipynb
tutorials/understand_components/part I/: Untitled.ipynb  basics and fundaments of Tensor Creation.ipynb  create tensor.ipynb  size_and_stride tracker.ipynb
tutorials/understand_components/part I/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  basics and fundaments of Tensor Creation-checkpoint.ipynb  size_and_stride-checkpoint.ipynb
(+4 files in other folders)
